name:                bindings-mpi 
version:             0.0.1
cabal-version:       >= 1.6
synopsis:            Haskell bindings to the MPI library. 
description:         Haskell bindings to the MPI library.
category:            FFI, Distributed Computing 
license:             BSD3
license-file:        LICENSE
copyright:           (c) 2010 Bernard James Pope
author:              Bernard James Pope (Bernie Pope)
maintainer:          florbitous@gmail.com 
homepage:            http://github.com/bjpop/bindings-mpi
build-type:          Simple
stability:           experimental
tested-with:         GHC==6.10.4 
extra-source-files:  src/cbits, src/include

Library
   extra-libraries:  mpi
   build-tools:      c2hs
   ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-orphans
   c-sources:
      src/cbits/init_wrapper.c, 
      src/cbits/constants.c
   include-dirs:
      src/include 
   hs-source-dirs:
      src
   build-depends:
      base,
      haskell98,
      bytestring,
      cereal,
      extensible-exceptions
   exposed-modules:
      Control.Parallel.MPI,
      Control.Parallel.MPI.Internal,
      Control.Parallel.MPI.Datatype,
      Control.Parallel.MPI.Comm,
      Control.Parallel.MPI.Status,
      Control.Parallel.MPI.ErrorClasses,
      Control.Parallel.MPI.Request,
      Control.Parallel.MPI.Tag,
      Control.Parallel.MPI.Rank
   other-modules:
      C2HS,
      Control.Parallel.MPI.MarshalUtils,
      Control.Parallel.MPI.Utils
