name:                bindings-mpi
version:             0.0.1
cabal-version:       >= 1.6
synopsis:            Haskell bindings to the MPI library.
description:         Haskell bindings to the MPI library.
category:            FFI, Distributed Computing
license:             BSD3
license-file:        LICENSE
copyright:           (c) 2010 Bernard James Pope
author:              Bernard James Pope (Bernie Pope)
maintainer:          florbitous@gmail.com 
homepage:            http://github.com/bjpop/bindings-mpi
build-type:          Simple
stability:           experimental
tested-with:         GHC==6.10.4, GHC==6.12.1
extra-source-files:  src/cbits, src/include

flag test
  description: Build testsuite and code coverage tests
  default: False

Library
   extra-libraries:  mpi
   build-tools:      c2hs
   ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-orphans
   c-sources:
      src/cbits/init_wrapper.c,
      src/cbits/constants.c
   include-dirs:
      src/include
   hs-source-dirs:
      src
   build-depends:
      base,
      haskell98,
      bytestring,
      cereal,
      extensible-exceptions,
      array
   exposed-modules:
      Control.Parallel.MPI.Internal,
      Control.Parallel.MPI.Datatype,
      Control.Parallel.MPI.Comm,
      Control.Parallel.MPI.Common,
      Control.Parallel.MPI.Status,
      Control.Parallel.MPI.ErrorClasses,
      Control.Parallel.MPI.ThreadSupport,
      Control.Parallel.MPI.Request,
      Control.Parallel.MPI.Tag,
      Control.Parallel.MPI.Rank,
      Control.Parallel.MPI.StorableArray,
      Control.Parallel.MPI.Serializable
   other-modules:
      C2HS,
      Control.Parallel.MPI.MarshalUtils,
      Control.Parallel.MPI.Utils

executable  bindings-mpi-testsuite
  hs-source-dirs:
    ./test
    ./src
  build-tools:      c2hs
  extra-libraries:  mpi
  ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-orphans
  c-sources:
    src/cbits/init_wrapper.c,
    src/cbits/constants.c
  include-dirs:
    src/include
  other-modules:
    Control.Parallel.MPI.Internal,
    Control.Parallel.MPI.Datatype,
    Control.Parallel.MPI.Comm,
    Control.Parallel.MPI.Common,
    Control.Parallel.MPI.Status,
    Control.Parallel.MPI.ErrorClasses,
    Control.Parallel.MPI.ThreadSupport,
    Control.Parallel.MPI.Request,
    Control.Parallel.MPI.Tag,
    Control.Parallel.MPI.Rank,
    Control.Parallel.MPI.StorableArray,
    Control.Parallel.MPI.Serializable
    C2HS,
    Control.Parallel.MPI.MarshalUtils,
    Control.Parallel.MPI.Utils
  main-is:       Testsuite.hs
  if flag(test)
    ghc-options: -fhpc
    build-depends: base >=3 && <=5, HUnit, testrunner, hpc, unix
  else
    buildable: False
