name:                haskell-mpi
version:             0.0.1
cabal-version:       >= 1.6
synopsis:            Haskell bindings to the MPI library.
description:         Haskell bindings to the MPI library.
 MPI is defined by the Message-Passing Interface Standard,
 as specified by the Message Passing Interface Forum. The latest release
 of the standard is known as MPI-2. These Haskell
 bindings are designed to work with any MPI-2 standards compliant
 implementation. Examples are MPICH2 and OpenMPI.
 .
 In addition to reading these documents, users may also find it
 beneficial to consult the MPI-2 standard documentation provided by the
 MPI Forum: <http://www.mpi-forum.org>, and also the documentation for
 the MPI implementation linked to this library (that is, the MPI
 implementation which is chosen when this Haskell library is compiled).
 .
 Use "Control.Parallel.MPI.Common" as starting point for browsing the API.
 .
 Module "Control.Parallel.MPI.Storable" contains high-performance API for mutable arrays.
 .
 Module "Control.Parallel.MPI.Serializable" contains slower API for arbitraty serializable values.

category:            FFI, Distributed Computing
license:             BSD3
license-file:        LICENSE
copyright:           (c) 2010 Bernard James Pope
author:              Bernard James Pope (Bernie Pope)
maintainer:          florbitous@gmail.com 
homepage:            http://github.com/bjpop/haskell-mpi
build-type:          Simple
stability:           experimental
tested-with:         GHC==6.10.4, GHC==6.12.1
extra-source-files:  src/cbits, src/include

flag test
  description: Build testsuite and code coverage tests
  default: False

Library
   extra-libraries:  mpi
   build-tools:      c2hs
   ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-orphans
   c-sources:
      src/cbits/init_wrapper.c,
      src/cbits/constants.c
   include-dirs:
      src/include
   hs-source-dirs:
      src
   build-depends:
      base > 3 && <= 5,
      haskell98,
      bytestring,
      cereal,
      extensible-exceptions,
      array
   exposed-modules:
      Control.Parallel.MPI.Internal,
      Control.Parallel.MPI.Datatype,
      Control.Parallel.MPI.Comm,
      Control.Parallel.MPI.Common,
      Control.Parallel.MPI.Status,
      Control.Parallel.MPI.ErrorClasses,
      Control.Parallel.MPI.ThreadSupport,
      Control.Parallel.MPI.Request,
      Control.Parallel.MPI.Tag,
      Control.Parallel.MPI.Rank,
      Control.Parallel.MPI.Op,
      Control.Parallel.MPI.Storable,
      Control.Parallel.MPI.Serializable,
      Control.Parallel.MPI.Group,
      Control.Parallel.MPI.ComparisonResult,
      Control.Parallel.MPI.Exception,
      Control.Parallel.MPI.Errhandler
   other-modules:
      C2HS,
      Control.Parallel.MPI.MarshalUtils,
      Control.Parallel.MPI.Utils

executable  haskell-mpi-testsuite
  hs-source-dirs:
    ./test
    ./src
  build-tools:      c2hs
  extra-libraries:  mpi
  ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-orphans
  c-sources:
    src/cbits/init_wrapper.c,
    src/cbits/constants.c
  include-dirs:
    src/include
  other-modules:
    Control.Parallel.MPI.Internal,
    Control.Parallel.MPI.Datatype,
    Control.Parallel.MPI.Comm,
    Control.Parallel.MPI.Common,
    Control.Parallel.MPI.Status,
    Control.Parallel.MPI.ErrorClasses,
    Control.Parallel.MPI.ThreadSupport,
    Control.Parallel.MPI.Request,
    Control.Parallel.MPI.Op,
    Control.Parallel.MPI.Tag,
    Control.Parallel.MPI.Rank,
    Control.Parallel.MPI.Storable,
    Control.Parallel.MPI.Serializable
    Control.Parallel.MPI.MarshalUtils,
    Control.Parallel.MPI.Utils,
    Control.Parallel.MPI.Group,
    Control.Parallel.MPI.ComparisonResult,
    Control.Parallel.MPI.Exception,
    Control.Parallel.MPI.Errhandler
    C2HS,
    IOArrayTests,
    SerializableTests,
    StorableArrayTests,
    GroupTests,
    PrimTypeTests,
    ExceptionTests,
    TestHelpers
  main-is:       Testsuite.hs
  if flag(test)
    ghc-options: -fhpc
    build-depends: base >=3 && <=5, HUnit, testrunner, hpc, unix
  else
    buildable: False

executable haskell-mpi-comprunclean
  hs-source-dirs:
    ./test
  ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-orphans
  other-modules:
  main-is:  CompileRunClean.hs
  if flag(test)
    build-depends: base >=3 && <=5, process
  else
    buildable: False
